# thomyorke

./: .gitmodules  thomyorke.h
libstreamripper/: Makefile  config.status  configure  libtool
libstreamripper/autom4te.cache/: output.0  requests  traces.0
libstreamripper/src/: Makefile
streamripdaemon/: CMakeLists.txt  daemon.init  forking-daemon.service  simple-daemon.service
streamripdaemon/cmake/: FindLibSoup.cmake
streamripdaemon/src/: CMakeLists.txt  daemon.c  streamripper.c
